# godot-mcp-docs

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
deploy/: Dockerfile
docs_converter/: download_docs.py
scripts/: install_system_deps.sh  run_local.sh
skills/: skill_creation_guideine.txt
skills/ui/: godot ui building (control system layout).txt  godot-responsive-layout-debuggin.txt  godot-ui-signals-pattern.txt
srcs/: server.py
srcs/tools/: skill_tools.py
srcs/utils/: skill_index.py  skill_utils.py
tests/: test_skill_tools.py
