[project]
name = "godot-mcp-server"
version = "0.1.0"
description = "MCP server for Godot documentation"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastmcp>=2.10.6",
    "pypandoc>=1.15",
    "requests>=2.34.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
